@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-21T16:23:34Z",
+  "timestamp" : "2024-05-22T08:24:59Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 770,
-  "uniques" : 382,
+  "count" : 771,
+  "uniques" : 383,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
